# RecipesRepository

./: .gitignore
RecipesRepository/: pyproject.toml
RecipesRepository/RecipesRepository/: asgi.py  settings.py  urls.py  wsgi.py
RecipesRepository/accounts/: forms.py  models.py  tokens.py  urls.py  views.py
RecipesRepository/accounts/migrations/: 0001_initial.py
RecipesRepository/accounts/templates/registration/: account_activation_email.html  account_activation_sent.html  login.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html
RecipesRepository/recipes/: admin.py  forms.py  models.py  urls.py  views.py
RecipesRepository/recipes/migrations/: 0001_initial.py  0002_recipe_owner.py  0003_productamount_alter_recipe_ingredients.py
RecipesRepository/recipes/templates/: add_recipe.html  get_recipe.html  home.html  home_logged.html
RecipesRepository/templates/: base.html  error.html
RecipesRepository/templates/registration/: login.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  password_reset_form.html
