[tool.poetry]
name = "recipesrepository"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.1"
python-decouple = "^3.5"
psycopg2 = "^2.9.3"
tzdata = "^2021.5"
asgiref = "^3.4.1"
pip = "^21.3.1"
setuptools = "^57.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
